8223448: Shenandoah disabled barriers blocks omit LRB

Reviewed-by: rkennke